# rust-hh-feed

./: .env.example  AGENTS.md  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/actions/setup-rust/: action.yml
.github/actions/verify-author/: action.yml
.github/workflows/: auto_merge.yml  cancel_on_merge.yml  ci.yml  daily_post.yml  delete_branch.yml  dependabot-automerge.yml  hh-curl-probe.yml  hh-query-probe.yml  manual_post.yml  manual_release.yml  post.yml  pr_checks.yml  pr_cleanup.yml  release.yml  update-rust.yml
doc.architecture/: README.md  TECHNICAL_DETAILS.md
docs/: ARCHITECTURE.md  BACKLOG.md  README.md  TECHNICAL_DETAILS.md
src/: hh.rs  lib.rs  main.rs  state.rs  telegram.rs
tests/: hh_client.rs  main_description.rs  main_failure.rs  main_manual.rs  main_skip_duplicates.rs  telegram.rs
tests/common/: mod.rs
